# CS2-Box-ESP

./: CMakeLists.txt  ESP.sln  README.md
ESP/: ESP.cpp  ESP.vcxproj  ESP.vcxproj.filters  esp.h  main.cpp
ESP/x64/Release/: ESP.exe.recipe  ESP.iobj  ESP.ipdb
ESP/x64/Release/ESP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ESP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: aimbot.cpp  aimbot.h  basic.cpp  basic.h  esp.cpp  esp.h  main.cpp  triggerbot.cpp  triggerbot.h
